WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115725
[BlackBerry] Read-only fields should not get keyboard focus
https://bugs.webkit.org/show_bug.cgi?id=115725
Summary
[BlackBerry] Read-only fields should not get keyboard focus
Nima Ghanavatian
Reported
2013-05-07 07:25:41 PDT
ssia
Attachments
Patch
(5.39 KB, patch)
2013-05-07 07:29 PDT
,
Nima Ghanavatian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nima Ghanavatian
Comment 1
2013-05-07 07:29:33 PDT
Created
attachment 200903
[details]
Patch
Rob Buis
Comment 2
2013-05-07 08:56:27 PDT
Comment on
attachment 200903
[details]
Patch Ok.
WebKit Commit Bot
Comment 3
2013-05-07 09:23:34 PDT
Comment on
attachment 200903
[details]
Patch Clearing flags on attachment: 200903 Committed
r149675
: <
http://trac.webkit.org/changeset/149675
>
WebKit Commit Bot
Comment 4
2013-05-07 09:23:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug